@@ -1,3 +1,8 @@
+2014-08-31  Corinna Vinschen  <corinna@vinschen.de>
+
+	* getfacl.c (usage): Add flags description.
+	(main): Print suid/sgid/vtx flags if available.
+
 2014-08-15  Corinna Vinschen  <corinna@vinschen.de>
 
 	* configure.ac: Convert to new AC_INIT style.
